# Doc-Diff

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  build.py  docdiff-cli.spec  docdiff.spec  main.py  pyproject.toml  requirements.txt
docdiff/: cli.py  differ.py  embedder.py  formatter.py  html_generator.py  matcher.py  parser.py
docdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docdiff/desktop/: launcher.py
docdiff/webapp/: app.py
tests/: test_cli.py  test_differ.py  test_formatter.py  test_html_generator.py  test_integration.py  test_matcher.py  test_parser.py  test_webapp.py
tests/fixtures/: new_contract.docx  old_contract.docx  thesis_v1.docx  thesis_v2.docx  with_table.docx
