[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docdiff"
version = "0.1.0"
description = "Semantic document diff for DOCX files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
docdiff = "docdiff.cli:main"
docdiff-gui = "docdiff.desktop.launcher:main"
docdiff-web = "docdiff.webapp.app:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["docdiff*"]
